fixed clipping issue with sidebar box shadow

--- a/src/.vuepress/theme/styles/sidebar.styl
+++ b/src/.vuepress/theme/styles/sidebar.styl
@@ -8,10 +8,16 @@ sidebar-shadow-color = gray-background
 sidebar-symbol-color = dark-green-font
 sidebar-hover-color = lighter-green-font
 
+sidebar-shadow(shadow)
+  if shadow
+    box-shadow 5px 0 5px sidebar-shadow-color
+  else
+    box-shadow 5px 0 5px transparent
+
 /* sidebar */
 .sidebar
   background sidebar-background-color
-  box-shadow 5px 0 5px sidebar-shadow-color
+  /*box-shadow 5px 0 5px sidebar-shadow-color*/
   font-size 1.3rem
   height 100% - header-height
   left -1 * sidebar-width
@@ -33,6 +39,7 @@ sidebar-hover-color = lighter-green-font
 
 .sidebar-open .sidebar
   left 0
+  sidebar-shadow true
 
 /* sidebar nav */
 .sidebar-header
@@ -74,6 +81,8 @@ sidebar-hover-color = lighter-green-font
 @media all and (min-width 1000px)
   .sidebar
     left 0
+    sidebar-shadow true
 
   .no-sidebar .sidebar
     left -1 * sidebar-static-width
+    sidebar-shadow false
